Changelog for CinemaVision

[- 1.0.11 -]

-fix:      Startup error on some devices (Android/Shield?)

[- 1.0.10 -]

- fix:     Error playing sequence when video bumper type is not set
- change:  Now highlights type setting and module title in red when video bumper type is not set
- fix:     (Hopefully - untested) Hachoir module causing errors when charset is an unknown encoding
- fix:     (Possible) - Error when playing sequence caused when storing a setting value
- add:     Detect Atmos and DTS-X tags in filenames when determining audio format
- fix:     Bad default regular expressions for slides causing issues with extensions other than .jpg
- fix:     On Windows, python and command actions were causing Kodi to minimize
- fix:     Possible fix for sequences being saved corrupted

[- 1.0.9 -]

- fix:     Trailers with source 'Directory' were not being filtered for video files only

[- 1.0.8 -]

- fix:     Various encoding errors when loading content

[- 1.0.7 -]

- fix:     Various encoding errors
- fix:     Fatal error when resolving a trailer's playable URL
- fix:     Error playing sequence when a feature has no rating
- fix:     Error when testing an action file when the abort action is not set

[- 1.0.6 -]

- fix:     Encoding errors when playing a sequence
- add:     Setting in Playback section: "Ignore Kodi playlist with only one item if there is a selection" (Default: Enabled)

[- 1.0.5 -]

- fix:     Errors when adding a new trailer module or loading a sequence where trailer scrapers have never been set

[- 1.0.4 -]

- add:     Ability to pass multiple movie IDs to the addon: movieid=<id>|<id>|<id>|...
- add:     Ability to pass nodialog to the addon to suppress the playlist editor dialog
- fix:     Error caused when when playing movies passed via movieid arg
- change:  Change script:// action to python:// (though script:// will still work)
- add:     Now shows a dialog on failure to write a sequence file