@@ -3,6 +3,9 @@ Changelog for CinemaVision
 [- 1.0.11 -]
 
 -fix:      Startup error on some devices (Android/Shield?)
+-change:   Greatly decrease content updating time
+-add:      Extra logging for sequence saving
+-fix:      Handle trivia with same file name but different extension
 
 [- 1.0.10 -]
 
